--- a/sI_bd的任务/html基础练习/task003.html
+++ b/sI_bd的任务/html基础练习/task003.html
@@ -14,27 +14,24 @@
         }
         .container{
             background-color:dimgray;
-            overflow: hidden;
-            position: relative;
+            display:  -webkit-flex;
+            display: flex;
         }
         .left{
             background-color: cadetblue;
-            width: 250px;
-            float: left;
+            width: 20%;
+            min-width: 150px;
 
         }
         .right{
             background-color: cadetblue;
-            width: 250px;
-            float: right;
+            width: 25%;
             text-align: center;
-            position: absolute;
-            top: 20px;
-            right: 20px;
         }
         .middle{
             background-color:cornflowerblue;
-            margin: 0 260px;
+             width: 55%;
+            margin: 0 10px;
         }
         
         .right a img{
