--- a/sI_扁平风格博客/blog.html
+++ b/sI_扁平风格博客/blog.html
@@ -5,6 +5,7 @@
     <title>扁平化风格</title>
     <link rel="stylesheet" href="../lib/normalize.css">
     <link rel="stylesheet" href="main.css">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 </head>
 <body>
   <div class="main-wrapper">
@@ -22,7 +23,7 @@
               <div class="inner">
                   <h1>张蓝蓝</h1>
                   <p class="sub-heading">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis quibusdam corporis.</p>
-                  <button id="main-btn">了解我</button>
+                  <a href="#" id="main-a">了解我</a>
                   <div class="more">
                       more
                   </div>   
@@ -117,11 +118,11 @@
         
         <footer>
             <ul class="share-group">
-                <li>item1</li>
-                <li>item2</li>
-                <li>item3</li>
-                <li>item4</li>
-                <li>item5</li>
+                <li><a href="#">item1</a></li>
+                <li><a href="#">item2</a></li>
+                <li><a href="#">item3</a></li>
+                <li><a href="#">item4</a></li>
+                <li><a href="#">item5</a></li>
             </ul>
             <div class="copy">
                 &copy lan_zz 2017
